--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %} {% set page_class = 'content' %} {% block content %}
 
 <article class="intro ts">
-  <p>{{ settings.introduction }}</p>
+  {{ settings.introduction }}
 </article>
 
 
