settings header/footer

--- a/templates/base.html
+++ b/templates/base.html
@@ -27,5 +27,9 @@
     </header>
 
     {% block content %}{% endblock %}
+
+    <footer class="footer">
+      {{ settings.footer }}
+    </footer>
   </body>
 </html>
