--- a/assets/css/utils/typography.scss
+++ b/assets/css/utils/typography.scss
@@ -83,7 +83,7 @@ a {
   h1, h2, h3, h4, h5, h6 {
     margin: 1em 0 0.5em 0;
   }
-  p, ul, ol, .table, .admonition {
+  p, ul, ol, .table, .admonition, pre {
     margin-bottom: 1em;
   }
   figure.md, figure.lg, video, .embed-container {
