--- a/templates/base.html
+++ b/templates/base.html
@@ -13,23 +13,24 @@
   </head>
 
   <body class="page page--{{ page_class }}">
-
-    <header class="header">
-      <nav class="nav">
-        <ul class="nav__list">
-          {% for item in settings.navigation %}
-           <li class="nav__item">
-             <a href="{{ settings.navigation[item] }}.html" class="nav__link">{{ item }}</a>
-           </li>
-          {% endfor %}
-        </ul>
-      </nav>
-    </header>
-
-    {% block content %}{% endblock %}
-
-    <footer class="footer">
-      {{ settings.footer }}
-    </footer>
+    <main class="main">
+      <header class="header">
+        <nav class="nav">
+          <ul class="nav__list">
+            {% for item in settings.navigation %}
+            <li class="nav__item">
+              <a href="{{ settings.navigation[item] }}.html" class="nav__link">{{ item }}</a>
+            </li>
+            {% endfor %}
+          </ul>
+        </nav>
+      </header>
+      <!-- content -->
+      {% block content %}{% endblock %}
+      <!-- /content -->
+      <footer class="footer">
+        {{ settings.footer }}
+      </footer>
+    </main>
   </body>
 </html>
